# Cluster

./: .clang-format  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  config.toml  pyproject.toml
.github/workflows/: build-release.yml  python-uv.yml
MQTTbroker/: mqttbroker-arch.sh  mqttbroker-ubuntu.sh  mqttbroker.sh
controller/: __init__.py  database_process.py  desktop_app.py  flask_app.py  game_process.py  logging_utils.py  main.py  mqtt_process.py  mqtt_rule  待办事项.md
controller/.fitten/rules/: api_development.md  api_documentation.md  code_style.md  database_guidelines.md  module_management.md  project_background.md
controller/log/: database_process.log.1  game_process.log.1  game_process.log.2  game_process.log.3
controller/resource/: game_config.db  game_data.db  node_status.db
controller/resource/static/: app.js  style.css
controller/resource/templates/: index.html
controller/src/: UI.py  audio_player.py  config.py  embedded_broker.py  event_bus.py  frpc_manager.py  game_manager.py  main.py  mqtt_client.py  node_manager.py
controller/test/: send_test_message.py
mcu/src/DET_node/: platformio.ini
mcu/src/DET_node/lib/: MatrixKeypad.h
mcu/src/DET_node/src/: main.cpp
mcu/src/STA_node/: platformio.ini
mcu/src/STA_node/src/: main.cpp
node_a/ESP8266/: platformio.ini
node_a/ESP8266/src/: main.cpp
node_a/ESP8266_B/src/: main.cpp
