[project]
name = "Cluster"
version = "0.9.5"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiomqtt>=2.3.0",
    "amqtt>=0.11.0",
    "pydantic-settings>=2.14.1",
    "pyside6==6.7.3",
    "qasync>=0.27.1",
    "toml>=0.10.2",
]

[project.scripts]
controller = "controller.src.main:main"

[tool.uv]
package = true

[tool.setuptools.packages.find]
include = ["controller"]

[tool.pyright]
extraPaths = ["controller/src"]

[dependency-groups]
dev = [
    "nuitka>=4.1",
    "pre-commit>=4.6.0",
]
